# rabbit-holes

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  build.stdout  docker-compose.yml  gru.md  meaning.md  test.stdout  tokei.makefile
cmake-rabbit-hole/: README.md  abstract.aux  analysis.aux  architecture.aux  conclusion.aux  configuration.aux  configuration.tex  environment.aux  hierarchy.aux  hierarchy.tex  introduction.aux  introduction.tex  main.aux  main.tex  modules.aux  observations.aux
cmake-tutorial/: Makefile
cmake-tutorial/generators/UNIX/target_link_libraries/: CMakeLists.txt  Makefile
cmake-tutorial/generators/UNIX/target_link_libraries/lib/: answer.cc
cmake-tutorial/generators/UNIX/target_link_libraries/src/: answer.cc
docker-rabbit-hole/: Makefile
docs/: README.md  _config.yml  crates.js  help.html  settings.html  src-files.js
ggml-gpt-oss-20b-GGUF/: .gitignore  Makefile  ggml-gpt-oss-20b-GGUF-curl-naive-strip_tags.rs  ggml-gpt-oss-20b-GGUF-curl.md  ggml-gpt-oss-20b-GGUF-curl.rs  ggml-gpt-oss-20b-GGUF-hello-c-in-memory.rs  ggml-gpt-oss-20b-GGUF-hello-c.rs  ggml-gpt-oss-20b-GGUF-make.rs  hello-c-in-memory.rs  hello-c.rs
ggml-gpt-oss-20b-GGUF-single-turn/: Makefile  hello-c-in-memory.rs
home/: .gitignore  Makefile  README.md  package-lock.json  package.json  tsconfig.base.json
intro/: Makefile
llama-agent/: .gitignore  Makefile
llama-cpp/: .gitignore  Makefile  llama-cpp-fmt-wrap.rs  llama-cpp-rabbit-hole.rs  llama-cpp-vi-wrap.rs  trace.makefile  trace.md
llama-cpp/my-cli/: CMakeLists.txt  Makefile  main.cpp
llm-rabbit-hole/: Makefile
magic_c_rabbit_hole/: .gitignore  Makefile  magic.c  magic.h  magic.rs  make.stderr  (+2 more)
(+6015 files in other folders)
